--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "lodash": "^4.17.10",
     "morgan": "~1.9.0",
     "mysql": "^2.16.0",
+    "nodemailer": "^4.6.8",
     "svg-captcha": "^1.3.11"
   }
 }
